--- a/index.html
+++ b/index.html
@@ -15,25 +15,59 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/layout.css" />
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6943db1d0cf02379aeba6e40025b05c&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6943db1d0cf02379aeba6e40025b05c&libraries=services,clusterer"
     ></script>
   </head>
   <body>
+    <header id="header">
+      <h2>EV Charging Station Map</h2>
+    </header>
     <main id="main">
       <!-- 여러가지 옵션 선택 후 지도 출력 -->
-      <div class="option_box">
-        <p>옵션 모음</p>
-        <p>옵션 모음</p>
-        <p>옵션 모음</p>
+      <div class="optionContainer">
+        <div class="optionBox">
+          <input type="address" />
+          <p>옵션 모음</p>
+          <p>옵션 모음</p>
+          <p>옵션 모음</p>
+        </div>
       </div>
       <!-- 지도 출력 -->
-      <div id="map" style="width: 100%; height: calc(100vh - 160px)"></div>
+      <div class="mapContainer">
+        <div class="map" style="width: 97%; height: calc(100vh - 160px)"></div>
+      </div>
     </main>
   </body>
   <script>
+    // 카카오 지도 호출
+
+    const container = document.querySelector(".map"); //지도를 담을 영역의 DOM 레퍼런스
+    const options = {
+      center: new kakao.maps.LatLng(37.571076, 126.99588), //지도의 중심좌표.
+      level: 7, //지도의 레벨(확대, 축소 정도)
+    };
+    const map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
+
+    // 마커 이미지 정보
+    const imageSrc = "images/placeholder.png",
+      imageSize = new kakao.maps.Size(30, 30),
+      imageOption = { offset: new kakao.maps.Point(32, 64) }; // 마커의 좌표와 일치시킬 이미지 안에서의 좌표 설정
+    // prettier-ignore
+    const markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption);
+
+    const clusterer = new kakao.maps.MarkerClusterer({
+      map: map,
+      averageCenter: true,
+      minLevel: 5,
+    });
+
     // 전기차 충전소 api 호출
 
     const charger_info_url =
@@ -46,101 +80,24 @@
     })
       .then((response) => response.json())
       .then((data) => {
-        const temp_lat = data.items[0].item[0].lat;
-        const temp_lng = data.items[0].item[0].lng;
-        const temp_addr = data.items[0].item[0].addr;
-        const temp_statnm = data.items[0].item[0].statNm;
-        // console.log(data.items[0]);
-        // load_map(
-        //   temp_addr,
-        //   temp_statnm,
-        //   "서울특별시 종로구",
-        //   temp_lat,
-        //   temp_lng
-        // );
-
         const items = data.items[0].item;
+        const markerList = [];
         console.log(items);
+
+        for (let i = 0; i < items.length; i++) {
+          const marker = new kakao.maps.Marker({
+            position: new kakao.maps.LatLng(items[i]["lat"], items[i]["lng"]),
+            image: markerImage,
+          });
+          console.log(items[i]["stat"]);
+          if (parseInt(items[i]["stat"]) === 2) {
+            markerList.push(marker);
+          }
+        }
+        clusterer.addMarkers(markerList);
       })
       .catch((error) => {
         console.log(error);
       });
-
-    // 카카오 지도 호출
-
-    const load_map = function (addr, place_name, search_place, lat, lng) {
-      const container = document.querySelector("#map"); //지도를 담을 영역의 DOM 레퍼런스
-      const options = {
-        //지도를 생성할 때 필요한 기본 옵션
-        center: new kakao.maps.LatLng(lat, lng), //지도의 중심좌표.
-        level: 3, //지도의 레벨(확대, 축소 정도)
-      };
-
-      const map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
-
-      const imageSrc = "images/placeholder.png", // 마커이미지의 주소입니다
-        imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
-        imageOption = { offset: new kakao.maps.Point(32, 64) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
-
-      // 주소-좌표 변환 객체를 생성합니다
-      const geocoder = new kakao.maps.services.Geocoder();
-
-      // // 주소로 좌표를 검색합니다
-      // geocoder.addressSearch(search_place, function (result, status) {
-      //   // 정상적으로 검색이 완료됐으면
-      //   if (status === kakao.maps.services.Status.OK) {
-
-      const coords = new kakao.maps.LatLng(lat, lng);
-
-      // 마커 이미지 정보
-      // prettier-ignore
-      const markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption),
-                markerPosition = coords; // 마커가 표시될 위치입니다
-
-      // 결과값으로 받은 위치를 마커로 표시합니다
-      const marker = new kakao.maps.Marker({
-        position: markerPosition,
-        image: markerImage,
-      });
-
-      // 마커가 지도 위에 표시되도록 설정
-      marker.setMap(map);
-
-      // 커스텀 오버레이를 생성합니다
-      const customOverlay = new kakao.maps.CustomOverlay({
-        position: coords,
-        content: place_name,
-        xAnchor: 0.55,
-        yAnchor: 5,
-      });
-
-      // 커스텀 오버레이를 지도에 표시합니다
-      customOverlay.setMap(map);
-      // 지도 의 중심을 결과값으로 받은 위치로 이동시킵니다
-      map.setCenter(coords);
-    };
-    //   });
-    // };
-
-    // // 주소 검색 ex)서울특별시 종로구
-    // const search_place = function () {
-    //   const geocoder = new kakao.maps.services.Geocoder();
-
-    //   geocoder.addressSearch("서울특별시 종로구", function (result, status) {
-    //     if (status === kakao.maps.services.Status.OK) {
-    //       const place_latlng = new kakao.maps.LatLng(result[0].y, result[0].x);
-    //       console.log(place_latlng);
-    //       return place_latlng;
-    //     }
-    //   });
-    // };
-
-    load_map(
-      "서울특별시 종로구 종로 157",
-      "종묘 공영주차장",
-      "서울특별시 종로구",
-      37.571076,
-      126.99588
-    );
   </script>
 </html>
